--- a/package.json
+++ b/package.json
@@ -1,25 +1,15 @@
 {
-  "name": "online-junqi",
-  "version": "0.2.0",
+  "name": "PVP Military Chess",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./dist/server.js",
-    "build": "tsc",
-    "postinstall": "npm run tsc",
-    "tsc": "tsc",
-    "test": "mocha --require ts-node/register test/**/*.test.ts",
-    "test:coverage": "nyc npm run test"
+    "start": "node ./src/server.js"
+    
   },
   "nyc": {
     "extends": "@istanbuljs/nyc-config-typescript",
     "check-coverage": true,
     "all": true,
-    "include": [
-      "src/**/!(*.test.*).[tj]s?(x)"
-    ],
-    "exclude": [
-      "src/_tests_/**/*.*"
-    ],
     "reporter": [
       "html",
       "lcov",
@@ -53,9 +43,6 @@
     "@types/node": "^20.12.2",
     "@types/socket.io": "^3.0.2",
     "@typescript-eslint/parser": "^7.4.0",
-    "nyc": "^15.1.0",
-    "ts-node": "^10.9.2",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.3"
+    "nyc": "^15.1.0"
   }
 }
